feat: wishList, getWishLists 로직밑 http 요청 수정