@@ -2,7 +2,6 @@ package com.nhnacademy.bookstoreback.wishlist.service.impl;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -36,7 +35,7 @@ public class WishListServiceImpl implements WishListService {
 			.map(wishList -> GetWishListResponse.builder()
 				.bookId(wishList.getBook().getBookId())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Override
